Fix issue with jumping dropdown menu

--- a/app/assets/stylesheets/components/_account.scss
+++ b/app/assets/stylesheets/components/_account.scss
@@ -541,3 +541,7 @@ div.tabs-container {
         }
     }
 }
+
+.ant-select-dropdown-menu-vertical {
+    max-height: 100% !important;
+}
